02-02-Fargate-Profiles-Advanced-YAML/kube-manifests/02-Applications/02-ns-app2/02-Nginx-App2-Deployment-and-NodePortService.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-nginx-deployment
  labels:
    app: app2-nginx
    runon: fargate     
  namespace: ns-app2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app2-nginx
  template:
    metadata:
      labels:
        app: app2-nginx
        runon: fargate
    spec:
      containers:
        - name: app2-nginx
          image: aslam24/nginx-web-grandcoffee:v1
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "128Mi"
              cpu: "500m"
            limits:
              memory: "500Mi"
              cpu: "1000m"                         
---
apiVersion: v1
kind: Service
metadata:
  name: app2-nginx-nodeport-service
  labels:
    app: app2-nginx
    runon: fargate
  namespace: ns-app2
  annotations:
#Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer
    alb.ingress.kubernetes.io/healthcheck-path: /index.html
    # For Fargate
    alb.ingress.kubernetes.io/target-type: ip        
spec:
  type: NodePort
  selector:
    app: app2-nginx
  ports:
    - port: 80
      targetPort: 80
